--- a/chanchofront/package.json
+++ b/chanchofront/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
     "sweetalert2": "^11.16.0",
     "swiper": "^11.1.15"
