--- a/chanchofront/package.json
+++ b/chanchofront/package.json
@@ -4,7 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host",
+    "dev:api": "vercel dev --listen 3000 --yes",
+    "dev:frontend": "vite --host",
+    "dev": "concurrently \"npm run dev:api\" \"npm run dev:frontend\"",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -15,7 +17,10 @@
     "@dnd-kit/sortable": "^10.0.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "dotenv": "^16.4.7",
     "firebase": "^11.2.0",
+    "mongodb": "^6.14.2",
+    "mongoose": "^8.12.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
@@ -31,6 +36,7 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "concurrently": "^9.1.2",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
